kind-demo-super-heroes/deployment-ui-super-heroes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: "rest-fights"
    app.quarkus.io/vcs-ref: main
    app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/quarkus-version: 3.9.3
    app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
    app.quarkus.io/build-timestamp: 2024-04-17 - 16:51:20 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: ui-super-heroes
    app.kubernetes.io/part-of: ui-super-heroes
    app.kubernetes.io/version: native-latest
    app: ui-super-heroes
    application: ui-super-heroes
    system: quarkus-super-heroes
    app.kubernetes.io/managed-by: quarkus
  name: ui-super-heroes
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: native-latest
      app.kubernetes.io/part-of: ui-super-heroes
      app.kubernetes.io/name: ui-super-heroes
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
        app.openshift.io/connects-to: "rest-fights"
        app.quarkus.io/vcs-ref: main
        app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
        app.quarkus.io/quarkus-version: 3.9.3
        app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
        app.quarkus.io/build-timestamp: 2024-04-17 - 16:51:20 +0000
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
        prometheus.io/port: "8080"
        prometheus.io/scheme: http
      labels:
        app: ui-super-heroes
        application: ui-super-heroes
        system: quarkus-super-heroes
        app.kubernetes.io/managed-by: quarkus
        app.kubernetes.io/version: native-latest
        app.kubernetes.io/part-of: ui-super-heroes
        app.kubernetes.io/name: ui-super-heroes
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: API_BASE_URL
              value: http://localhost:<port-mapped-on-kind>
          image: quay.io/quarkus-super-heroes/ui-super-heroes:native-latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: ui-super-heroes
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              memory: 128Mi
            requests:
              memory: 32Mi
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/started
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
